# sol-skins

./: .env.example  .gitignore  CANDY_MACHINE_AUTO_GUIDE.md  CLAUDE.md  DISCORD_INTEGRATION_SUMMARY.md  DISCORD_SETUP.md  IMPLEMENTATION_COMPLETE.md  INTEGRATION-TODO.md  IRYS_INTEGRATION.md  METAPLEX_INTEGRATION_PLAN.md  ONCHAIN_INTERACTIONS.md  ORACLE_REMOVAL_SUMMARY.md  PACK_INTEGRATION_COMPLETE.md  PACK_SETUP_COMPLETE.md  PHASE1_PROGRESS.md  PHASE2_3_COMPLETE.md  PHASE4_COMPLETE.md  PHASE4_PROGRESS.md  PRODUCTION_INTEGRATION_GUIDE.md  PROGRAM_REVIEW.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  SOLANA_ADMIN_API.md  SOLANA_INTEGRATION_GUIDE.md  TEST_OFF_CHAIN.md  TODO.md  VRF_GUIDE.md  VRF_IMPLEMENTATION_COMPLETE.md  docker-compose.yml  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  test-solana-admin-api.sh  turbo.json  vercel.json
client/: package.json
deployment/: docker-compose.yml  init-db.sql
docs/: CANDY_MACHINE_CONFIG.md  CONTROLLER_UPDATES_SUMMARY.md  FRONTEND_PAYMENT_INTEGRATION.md  FRONTEND_UPDATES_SUMMARY.md  (+8 more)
solana/programs/solana/: Cargo.toml
solana/programs/solana/src/: constants.rs  errors.rs  events.rs  lib.rs  merkle.rs  utils.rs  vrf.rs
solana/programs/solana/src/cpi/: core.rs  metaplex.rs  mod.rs  spl.rs
solana/programs/solana/src/instructions/: admin.rs  assign.rs  create_box.rs  mint_box.rs  mod.rs  open_box.rs  publish_root.rs  reveal_and_claim.rs  sell_back.rs  set_price.rs  vrf_callback.rs
solana/programs/solana/src/states/: batch.rs  box_state.rs  global.rs  inventory_assignment.rs  mod.rs  price_store.rs  vrf_pending.rs
(+531 files in other folders)
